--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.profiles.include=real
-spring.pid.file=/home/be001/project/stack-overflow-clone.pid
+#spring.profiles.include=real
+#spring.pid.file=/home/be001/project/stack-overflow-clone.pid
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
