feat: AWS RDS MariaDB Create Tables / Spring Boot JPA domain mapping for Table (#31 close)

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-#spring.profiles.include=real
+
 #spring.pid.file=/home/be001/project/stack-overflow-clone.pid
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.profiles.include=db
