--- a/server/build.gradle
+++ b/server/build.gradle
@@ -19,14 +19,28 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	// Annotation Lombok
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+
+	//Swagger REST API Docs
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+
+	//ORM JPA
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	//JPA to Maria DB Connection Driver
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+
+	//validation Check
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.named('test') {
