--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+spring.profiles.active=local
 #spring.pid.file=/home/be001/project/stack-overflow-clone.pid
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.profiles.include=db
