--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -25,6 +25,7 @@
       }
     ],
     "react/react-in-jsx-scope": 0,
-    "react/jsx-uses-react": 0
+    "react/jsx-uses-react": 0,
+    "react/prop-types": "off"
   }
 }
