--- a/server/src/main/resources/application-db2.properties
+++ b/server/src/main/resources/application-db2.properties
@@ -6,8 +6,8 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.hibernate.ddl-auto=create
-
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
 
 spring.jpa.show-sql=true
 
