--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
   },
   "proxy": "http://211.193.45.228:8080",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "GENERATE_SOURCEMAP=false react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
