feat: swagger 적용중 (#60)

--- a/server/src/main/resources/application-db2.properties
+++ b/server/src/main/resources/application-db2.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=8080
 spring.h2.console.enabled=true
 
 spring.jpa.properties.hibernate.format_sql=true
@@ -11,6 +11,6 @@ spring.jpa.generate-ddl=true
 
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:h2:mem:testdb2;MODE=MYSQL
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
