--- a/appspec.yml
+++ b/appspec.yml
@@ -24,3 +24,15 @@ hooks:
     - location: health.sh
       timeout: 60
       runas: ubuntu
+
+      spring:
+        h2:
+          console:
+            enabled: true
+            path: /h2
+        datasource:
+          url: jdbc:h2:mem:test
+        jpa:
+          hibernate:
+            ddl-auto: create
+          show-sql: true
