--- a/server/build.gradle
+++ b/server/build.gradle
@@ -48,6 +48,17 @@ dependencies {
 	//validation Check
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+	//sercurity
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.security:spring-security-test'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+	//jwt
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation 'com.auth0:java-jwt:3.19.2'
+
+	//StringUtils
+	implementation 'org.apache.commons:commons-lang3:3.11'
 
 }
 
