--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,3 +2,10 @@
 #spring.pid.file=/home/be001/project/stack-overflow-clone.pid
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.profiles.include=db2
+
+####################JWT######################
+jwt.security.key=JWT
+jwt.response.header=Authorization
+jwt.token.prefix=Bearer
+#################################################
+
