feat: Oauth2기능 일부 (#114)

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -60,6 +60,9 @@ dependencies {
 	//StringUtils
 	implementation 'org.apache.commons:commons-lang3:3.11'
 
+	//OAuth2
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
 }
 
 tasks.named('test') {
