--- a/appspec.yml
+++ b/appspec.yml
@@ -25,14 +25,25 @@ hooks:
       timeout: 60
       runas: ubuntu
 
-      spring:
-        h2:
-          console:
-            enabled: true
-            path: /h2
-        datasource:
-          url: jdbc:h2:mem:test
-        jpa:
-          hibernate:
-            ddl-auto: create
-          show-sql: true
+spring:
+  h2:
+    console:
+      enabled: true
+      path: /h2
+  datasource:
+    url: jdbc:h2:mem:test
+  jpa:
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            clientId:10785063890-gm3uem6vclkndn5ds1a6svsntd9tcdo8.apps.googleusercontent.com
+            clientSecret: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
+            scope:
+              - email
+              - profile
