--- a/server/src/main/resources/application-db2.properties
+++ b/server/src/main/resources/application-db2.properties
@@ -1,4 +1,4 @@
-
+server.port=8082
 spring.h2.console.enabled=true
 
 spring.jpa.properties.hibernate.format_sql=true
@@ -10,7 +10,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 
 spring.jpa.show-sql=true
-server.port=8082
-spring.datasource.url=jdbc:h2:mem:testdb2;MODE=MYSQL
+
+spring.datasource.url=jdbc:h2:mem:testdb3;MODE=MYSQL
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
+
+spring.h2.console.settings.web-allow-others=true
+
