feat: Oauth2기능 - 서비스 작성 (port: 8080) (#114)

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 
 #spring.pid.file=/home/be001/project/stack-overflow-clone.pid
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-spring.profiles.include=db2
+spring.profiles.include=oauth
+spring.session.store-type=jdbc
 
 ####################JWT######################
 jwt.security.key=JWT
