--- a/server/build.gradle
+++ b/server/build.gradle
@@ -48,6 +48,9 @@ dependencies {
 	//validation Check
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+	//sercurity
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.security:spring-security-test'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 	//jwt
