--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
   },
   "proxy": "http://211.193.45.228:8081",
   "scripts": {
-    "start": "GENERATE_SOURCEMAP=false react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
