--- a/server/.gitignore
+++ b/server/.gitignore
@@ -35,6 +35,7 @@ out/
 
 ### VS Code ###
 .vscode/
-
+application.properties
 application-db.properties
+application-db2.properties
 application-realdb.properties
