--- a/server/build.gradle
+++ b/server/build.gradle
@@ -54,7 +54,9 @@ dependencies {
 
 	//OAuth2
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-
+	testImplementation("org.junit.vintage:junit-vintage-engine") {
+		exclude group: "org.hamcrest", module: "hamcrest-core"
+	}
 }
 
 tasks.named('test') {
