--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #spring.pid.file=/home/be001/project/stack-overflow-clone.pid
 spring.profiles.active=local
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-spring.profiles.include=db2
+spring.profiles.include=db
 
 ####################JWT######################
 jwt.security.key=JWT
